[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
authors = ["Prince Mbeah Essilfie <mbeahessilfieprince@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
indicatif = "0.17.8"
log = "0.4.21"
predicates = "3.1.0"
